# mediaPlayerRemote

./: .gitignore  .gitmodules  CMakeLists.txt  Main.qml  README.md  androidcontrol.cpp  androidcontrol.h  backend.cpp  backend.h  btSocket.h  btagent.h  main.cpp  ntSocket.h  settingsmanager.cpp  settingsmanager.h
CustomComponents/: CustomAdvanceSlider.qml  CustomButton.qml  CustomSlider.qml  CustomSwitch.qml  CustomTextInputForMacAddress.qml  CustomTextInputWithMask.qml
Pages/: AdvanceControl.qml  ConnectionPage.qml  ControlPage.qml  GeneralControl.qml  SettingsPage.qml  SubtitleControl.qml  scripts.js
